Adding first UI base setup for EndUser flow.

--- a/GPSDemo/AndroidManifest.xml
+++ b/GPSDemo/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".EndUser">
+            android:name=".user.EndUserActivity">
         </activity>
         <activity
             android:name=".MyBoy">
