--- a/GPSDemo/AndroidManifest.xml
+++ b/GPSDemo/AndroidManifest.xml
@@ -6,7 +6,24 @@
 
     <uses-sdk
         android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="22" />
+
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+    <meta-data  
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCPZ_apbDVutWs2z3yWrv8a27Ed5rKeIKU" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -22,17 +39,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".user.EndUserActivity">
+        <activity android:name=".user.EndUserActivity" >
         </activity>
-        <activity
-            android:name=".MyBoy">
+        <activity android:name=".MyBoy" >
         </activity>
-        <activity
-            android:name=".Restaurant">
+        <activity android:name=".Restaurant" >
         </activity>
-        <activity
-            android:name=".RestaurantOrder">
+        <activity android:name=".RestaurantOrder" >
         </activity>
     </application>
 
